ghc/tests/typecheck/should_compile/tc031.hs
module ShouldSucceed where

data Rec = Node Int Rec
