ghc/tests/typecheck/should_fail/Data82.hs
module Data82 where

data FooData = FooData
